[package]
name = "sandengine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_mod_picking = { version = "0.19.0", default-features = false, features = ["backend_egui", "backend_sprite"] }
# bevy_egui = "0.24.0" # bevy_egui is re-exported by bevy_mod_picking

rayon = "1.9.0"
bitflags = "2.4.2"
rand = "0.8.5"
strum = { version="0.26.1", features=["derive"] }

bevy_rapier2d = { version = "0.26", features = [ "debug-render-2d" ] }
bevy-tnua-rapier2d = "0.6.0"
bevy-tnua = "0.18.0"

# Marching squares algorithm
contour = "0.13.1"
# Geometry library
# Used for geometry simplification
geo = "0.28.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
