[package]
name = "sandengine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]

[dependencies]
bevy = { version = "0.14.0" }
bevy_mod_picking = { version = "0.20.1", default-features = false, features = [ "backend_egui", "backend_sprite" ] }
bevy_egui = { version = "0.28.0", default-features = false }

bitflags = "2.4.2"
rand = "0.8.5"
strum = { version="0.26.1", features= [ "derive" ] }

bevy_rapier2d = { version = "0.27", features = [ "wasm-bindgen", "debug-render-2d" ] }
bevy-tnua-rapier2d = "0.7.0"
bevy-tnua = "0.19.0"

# Marching squares algorithm
contour = "0.13.1"
# Geometry library
# Used for geometry simplification
geo = "0.28.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in release mode at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Significantly slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in wasm-release mode to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Use release profile as default values.
inherits = "release"
# Optimize with size in mind (also try "s", sometimes it is better).
# This doesn't increase compilation times compared to -O3, great improvements.
opt-level = "z"
# Strip all debugging information from the binary to reduce file size.
strip = "debuginfo"
